--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -4,6 +4,7 @@
     <label>First Name</label>
     <input class="form-control" name="firstName" #firstName="ngModel" [(ngModel)]="employeeService.selectedEmployee.firstName"
       placeholder="First Name" required>
+      <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">First Name is required</div>
   </div>
   <div class="form-group">
     <label>Last Name</label>
@@ -11,7 +12,9 @@
   </div>
   <div class="form-group">
     <label>Email ID</label>
-    <input class="form-control" name="emailId" #emailId="ngModel" [(ngModel)]="employeeService.selectedEmployee.emailId" placeholder="Email ID">
+    <input class="form-control" name="emailId" #emailId="ngModel" [(ngModel)]="employeeService.selectedEmployee.emailId" placeholder="Email ID"
+    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+    <div class="alert alert-danger" *ngIf="emailId.touched && !emailId.valid">Enter valid Email ID</div>
   </div>
   <div class="form-group">
     <label>Mobile Number</label>
